feat: hotel details page done.

--- a/flight/flightlisting.html
+++ b/flight/flightlisting.html
@@ -42,18 +42,21 @@
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
-            href="flightlisting.html"
+            href="#"
             class="inline-flex nav-link flights-btn nav-booking-tab active"
           >
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
-          <a href="#" class="inline-flex nav-link stays-btn nav-booking-tab">
+          <a
+            href="../hotel/hotelsearch.html"
+            class="inline-flex nav-link stays-btn nav-booking-tab"
+          >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
           </a>
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html"
+          <a href="/landing/index.html" target="_blank"
             ><img src="/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
