--- a/hotel/hotelsearch.html
+++ b/hotel/hotelsearch.html
@@ -56,14 +56,18 @@
         </div>
 
         <div class="company-logo">
-          <a href="/landing/index.html"
+          <a href="/landing/index.html" target="_blank"
             ><img src="/assets/company-logo.svg" alt="Logo"
           /></a>
         </div>
 
         <div class="nav-right inline-flex">
-          <button class="btn-white fs-16 fw-semi-bold">Login</button>
-          <button class="btn-secondary fs-16 fw-semi-bold">Sign up</button>
+          <button class="btn-white fs-16 fw-semi-bold">
+            <a href="../auth/login.html">Login</a>
+          </button>
+          <button class="btn-secondary fs-16 fw-semi-bold">
+            <a href="../auth/signup.html">Sign up</a>
+          </button>
           <div class="mobile-toggle" id="hamburger">
             <i class="fa-solid fa-bars menu-icon"></i>
             <i class="fa-solid fa-xmark close-icon"></i>
@@ -73,7 +77,7 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="#" class="mobile-link">
+        <a href="../flight/flightsearch.html" class="mobile-link">
           <img src="/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;Find Flights</span>
         </a>
@@ -81,8 +85,12 @@
           <img src="/assets/bed-icon.svg" alt="bed" />
           <span class="fs-16 fw-semi-bold">&nbsp;Find Stays</span>
         </a>
-        <a href="#" class="mobile-link fs-16 fw-semi-bold">Login</a>
-        <a href="#" class="mobile-link fs-16 fw-semi-bold">Sign Up</a>
+        <a href="../auth/login.html" class="mobile-link fs-16 fw-semi-bold"
+          >Login</a
+        >
+        <a href="../auth/signup.html" class="mobile-link fs-16 fw-semi-bold"
+          >Sign Up</a
+        >
       </div>
     </header>
 
@@ -243,7 +251,7 @@
           </p>
         </div>
         <button class="btn-stroke">
-          <a href="listinghotel.html">See All</a>
+          <a href="listinghotel.html" target="_blank">See All</a>
         </button>
       </div>
       <div class="booking-banner box-area">
@@ -332,7 +340,7 @@
           </p>
         </div>
         <button class="btn-stroke">
-          <a href="listinghotel.html">See All</a>
+          <a href="listinghotel.html" target="_blank">See All</a>
         </button>
       </div>
       <div class="travel-location-wrapper">
